tablet and desktop styles

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,7 +8,7 @@
         </svg>
       </div>
       <nav class="nav menu">
-        <ul class="nav__gird">
+        <ul class="nav__grid">
           <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
           <li class="nav__item"><a href="#" class="nav__link">About us</a></li>
           <li class="nav__item">
@@ -59,14 +59,17 @@
       </ul>
     </div>
     <div class="big-circle"></div>
-    <div class="locations">
-      <p class="locations__number">16</p>
-      <p class="locations__name">cafes</p>
-    </div>
-    <div class="locations">
-      <p class="locations__number">23</p>
-      <p class="locations__name">food trucks</p>
-    </div>
+    <ul class="locations">
+      <li>
+        <p class="locations__number">16</p>
+        <p class="locations__name">cafes</p>
+      </li>
+      <li>
+        <p class="locations__number">23</p>
+        <p class="locations__name">food trucks</p>
+      </li>
+    </ul>
+
     <ul class="decorations">
       <li class="decorations__item">
         <div class="decorations__circle"></div>
@@ -77,10 +80,6 @@
     </ul>
     <ul class="left-list">
       <li class="left-list__item">
-        <p class="left-list__title">
-          bio<br />
-          eco
-        </p>
         <div class="left-list__photo-container"></div>
       </li>
       <li class="left-list__item">
