--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -8,11 +8,14 @@
   max-width: 320px;
   height: 502px;
   margin: 0 auto;
+  position: relative;
 }
 .logo {
   display: inline-block;
   padding-top: 8px;
   padding-left: 20px;
+  position: relative;
+  z-index: 5;
 }
 
 .hero {
@@ -102,11 +105,10 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
+
   right: 32px;
   top: 92px;
-  right: 32px;
 }
 
 .mobile-menu-button {
@@ -115,9 +117,11 @@
   right: 20px;
   background: transparent;
   border: none;
+  width: 20px;
+  padding: 0;
 }
 
-@media (max-width: 1119px) {
+@media (max-width: 1199px) {
   .menu {
     display: none;
   }
@@ -204,10 +208,11 @@
     max-width: 768px;
     height: 416px;
     margin: 0 auto;
+    position: relative;
   }
   .mobile-menu-button {
     top: 46px;
-    right: 330px;
+    right: 220px;
   }
   .nav__button--desktop {
     display: inline-block;
@@ -233,5 +238,236 @@
     gap: 20px;
     padding: 12px 35px;
     width: 160px;
+  }
+  .hero {
+    padding-left: 32px;
+    &__title {
+      padding-top: 20px;
+    }
+  }
+  .big-circle {
+    left: 248px;
+    top: 43px;
+  }
+  .ice-cream-container {
+    width: 143px;
+    height: 336px;
+    background: transparent url(../images/ice-cream-T.png);
+    position: absolute;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    left: 100px;
+    top: 80px;
+  }
+
+  .locations {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    list-style: none;
+    padding: 0;
+    position: absolute;
+    top: 94px;
+    right: 42px;
+    z-index: 1;
+
+    &__number {
+      font-family: 'Titan One';
+      font-style: normal;
+      font-weight: $font-weight-400;
+      font-size: 28px;
+      line-height: 1.14;
+      text-align: right;
+      letter-spacing: 0.04em;
+      text-transform: uppercase;
+      color: $primary-color;
+      margin: 0;
+      z-index: 1;
+    }
+    &__name {
+      font-style: normal;
+      font-weight: $font-weight-400;
+      font-size: 8px;
+      line-height: 1.25;
+      text-align: right;
+      margin: 0;
+      color: $white-color;
+      padding-bottom: 17px;
+    }
+  }
+  .left-list {
+    display: flex;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    padding-left: 32px;
+    position: absolute;
+    top: 246px;
+
+    &__photo-container {
+      width: 152px;
+      height: 154px;
+      background: transparent url(../images/milk-container-T.png);
+
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+      margin: 0;
+    }
+
+    &__text-container {
+      display: flex;
+      flex-direction: column;
+      gap: 7px;
+    }
+
+    &__text {
+      width: 114px;
+      font-weight: $font-weight-400;
+      font-size: 8px;
+      line-height: 1.5;
+      color: $white-color;
+      margin: 0;
+      padding-top: 40px;
+    }
+    &__icon {
+      border-radius: 50%;
+      width: 18px;
+      height: 18px;
+    }
+  }
+  .decorations {
+    display: flex;
+    gap: 44px;
+    flex-direction: column;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    top: 92px;
+    right: 32px;
+    &__circle {
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      background-color: $white-color;
+    }
+  }
+  .so-tasty-container {
+    width: 190px;
+    height: 150px;
+    background: transparent url(../images/so-tasty-T.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    margin: 0;
+    position: absolute;
+    right: 32px;
+    bottom: 1px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+    height: 664px;
+  }
+
+  .nav {
+    display: flex;
+    &__grid {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      gap: 35px;
+      align-items: center;
+      z-index: 5;
+    }
+    &__link {
+      text-decoration: none;
+      font-weight: $font-weight-700;
+      font-size: $font-size-16;
+      line-height: 1.31;
+      color: $white-color;
+      &:hover {
+        color: $primary-color;
+      }
+    }
+  }
+  .hero {
+    padding-top: 60px;
+    &__title {
+      font-size: $font-size-38;
+      line-height: 44px;
+      width: 277px;
+    }
+    &__span {
+      font-size: 56px;
+    }
+  }
+  .hero-grid {
+    padding-top: 24px;
+    &__button {
+      width: 107px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: $font-size-14;
+      line-height: 1.28;
+      padding: 0;
+      &--modifier {
+        width: 138px;
+      }
+    }
+  }
+  .big-circle {
+    width: 534px;
+    height: 534px;
+    top: 54px;
+
+    left: 510px;
+  }
+  .locations {
+    top: 156px;
+    &__number {
+      font-size: 46px;
+      line-height: 1.15;
+    }
+    &__name {
+      font-size: $font-size-14;
+      line-height: 1.28;
+    }
+  }
+  .decorations {
+    top: 152px;
+    gap: 62px;
+    &__circle {
+      width: 30px;
+      height: 30px;
+    }
+  }
+  .left-list {
+    top: 388px;
+    &__photo-container {
+      width: 213px;
+      height: 216px;
+    }
+    &__text-container {
+      gap: 20px;
+    }
+
+    &__text {
+      width: 200px;
+      font-size: $font-size-14;
+      line-height: 1.42;
+    }
+    &__icon {
+      width: 26px;
+      height: 26px;
+    }
   }
 }
