--- a/src/partials/howitsmade.html
+++ b/src/partials/howitsmade.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&family=Titan+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.min.css">
+    <link rel="stylesheet" href="/src/sass/main.css">
 </head>
 
 <body>
@@ -22,14 +22,16 @@
                 <h2 class="made__title">how it’s made?</h2> <!-- class="center-text" -->
 
                 <div class="made-section">
-                    <div class="made-section__image">
-                        
+                    <div class="made-section__divimage">
+                        <img class="made-section__image" src="/src/images/made.png" alt="cow">
                     </div>
                     <div class="made-section__text">
-                        <p class="made-section__text made-section__text--text1">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
-                        <p class="made-section__text made-section__text--text2">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt. <br>
-                            Aliquam erat volutpat. Aenean accumsan.</p>
+                        <p class="made-section__text made-section__text--text1">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. <br> Nam vel justo cursus, faucibus lorem eget, egestas eros. <br> Maecenas eleifend erat at justo fringilla.</p>
+                        <p class="made-section__text made-section__text--text2">Curabitur lacinia enim at ex blandit, vel pellentesque odio <br> elementum. Mauris rhoncus orci in imperdiet placerat. <br> Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna <br> maximus. Cras massa nibh, tincidunt. <br>
+                            </p>
+                        <p class="made-section__text made-section__text--text3">Aliquam erat volutpat. Aenean accumsan.</p>
                     </div>
+                    <button data-modal-open class="made-section__button" type="button">Read more > </button>
                 </div>
 
         </section>
