--- a/src/sass/_howitsmade.scss
+++ b/src/sass/_howitsmade.scss
@@ -3,13 +3,14 @@
    font-weight: 400;
    text-align: center;
    text-transform: uppercase;
+   margin: 0px auto;
 
    &__subtitle{
    font-family: 'Titan One';
    line-height: 34px;
    font-size: 30px;
    letter-spacing: 0.04em;
-   color: #FFA5BA;
+   color: $secondary-color;
    }
 
    &__title{
@@ -17,10 +18,69 @@
    font-size: 58px;
    line-height: 66px;
    letter-spacing: 0.06em;
-   color: #D41443;
+   color: $primary-color;
    }
 }
 
 .made-section{
+    background: url(../images/made-background.png);
+    background-repeat: no-repeat;
+    font-family: 'DM Sans';
+    font-style: normal;
+
     display: flex;
+    gap: 99px;
+
+    &__divimage{
+       
+    }
+
+    &__image{
+
+    }
+
+    &__text{
+        font-weight: 500;
+        letter-spacing: 0.04em;
+        text-align: left;
+    }
+
+    &__button{
+        width: 176px;
+        height: 44px;
+        background: $white-color;
+        border-radius: 22px;
+        border-color: $white-color;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 21px;
+        align-items: center;
+        text-align: center;
+        color: $primary-color;
+        position: absolute;
+        
+    }
+}
+
+.made-section__text--text1{
+    
+    font-size: 16px;
+    line-height: 176%;
+    color: $black-color;
+    padding-top: 90px;
+    padding-bottom: 32px;
+}
+
+.made-section__text--text2{
+    
+    font-size: 14px;
+    line-height: 194%;
+    color: $gray-color;
+}
+
+.made-section__text--text3{
+    
+    font-size: 14px;
+    line-height: 194%;
+    color: $gray-color;
 }
