--- a/src/sass/components/_common.scss
+++ b/src/sass/components/_common.scss
@@ -1,1 +1,9 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+
+body {
+    font-family: 'DM Sans';
+    font-weight: 400px;
+    font-style: normal;
+    font-size: 14px;
+     
+}
