--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,4 +1,8 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+:root {
+  --main-color-light: #ffa5ba;
+  --main-color-dark: #d41443;
+}
 
 * {
   box-sizing: border-box;
@@ -7,7 +11,10 @@
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
 }
 
 li {
