cards look good and hovers work

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -24,7 +24,8 @@
                         <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
                     </svg>
                 </div>
-                <p class="products__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                <p class="products__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor
                     incididunt ut labore et</p>
                 <button type="button" class="products__button" style="all: unset;">
                     <img src="/src/images/products-imgs/arrow-right_no-background.png" alt="arrow"
