--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -46,7 +46,7 @@
   color: #d41443;
 }
 
-/** Drinks grid **/
+/** Products drinks grid **/
 .p-grid {
   display: flex;
   flex-direction: row;
@@ -55,7 +55,6 @@
 
 .products {
   position: relative;
-  flex-basis: calc((100% - 72px) / 4);
 }
 
 .products__image {
@@ -69,12 +68,18 @@
   flex-direction: column;
   align-items: center;
   position: absolute;
-  width: 324px;
-  height: 573px;
-  left: 20px;
+  width: 368px;
+  height: 535px;
   top: 264px;
   z-index: -1;
   padding-top: 154px;
+
+  &:hover {
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
+    transition-property: box-shadow;
+  }
 }
 
 .products__wrapper2 {
@@ -84,12 +89,18 @@
   flex-direction: column;
   align-items: center;
   position: absolute;
-  width: 324px;
-  height: 573px;
-  left: 20px;
+  width: 368px;
+  height: 535px;
   top: 264px;
   z-index: -1;
   padding-top: 154px;
+
+  &:hover {
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
+    transition-property: box-shadow;
+  }
 }
 
 .products__wrapper3 {
@@ -99,19 +110,24 @@
   flex-direction: column;
   align-items: center;
   position: absolute;
-  width: 324px;
-  height: 573px;
-  left: 20px;
+  width: 368px;
+  height: 535px;
   top: 264px;
   z-index: -1;
   padding-top: 154px;
+
+  &:hover {
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
+    transition-property: box-shadow;
+  }
 }
 
 .products__subtitle {
   font-family: 'Titan One';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 20px;
+  font-weight: var(--font-weight-400);
+  font-size: var(--font-size-20);
   line-height: 23px;
   text-align: center;
   letter-spacing: 0.04em;
@@ -127,10 +143,9 @@
 }
 
 .products__text {
-  width: 160px;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
+  width: 240px;
+  font-weight: var(--font-weight-700);
+  font-size: var(--font-size-14);
   line-height: 176%;
   text-align: center;
   letter-spacing: 0.04em;
@@ -142,6 +157,13 @@
   background-color: white;
   border-radius: 50%;
   align-self: center;
-  margin-top: 32px;
-  margin-bottom: 40px;
+  margin-top: 60px;
+  margin-bottom: 60px;
+
+  &:hover {
+    background-color: #ffa5ba;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
+
+/** Products hover **/
