--- a/src/partials/about-advantages.html
+++ b/src/partials/about-advantages.html
@@ -28,7 +28,7 @@
                     <h3 class="about-section__subtitle">tradition and love </h3>
                     <h2 class="about-section__title">how it’s made?</h2>
                     <ul class="about-section__list unstyled-list">
-                        <li class="about-section__item">
+                        <li class="about-section__item-image">
                             <picture>
                                 <source
                                     media="screen and (max-width: 767px)"
@@ -44,7 +44,7 @@
                                     alt="John Smith"/>                                
                             </picture>
                         </li>
-                        <li class="about-section__item">
+                        <li class="about-section__item-description">
                             <div class="description">
                                 <ul class="description__list unstyled-list">
                                     <li class="description__item">
