--- a/src/sass/components/_advantages.scss
+++ b/src/sass/components/_advantages.scss
@@ -28,7 +28,7 @@
         font-size: 16px;
         line-height: 18px;
         letter-spacing: 0.02em;
-        color: #000000;
+        color: #000000;       
     }
     svg {
         background: transparent;
@@ -37,24 +37,53 @@
 
 .advantages-section__item--one::before {
     content: "";
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 80px;
     background-image: url(../images/advantages/bucket.png);
+    background-repeat: no-repeat;
+    border: 2px solid transparent;
+    border-radius: 50%;
+    background-position: center;
+    animation: animate150 2500ms infinite 1000ms;
 }
 
 .advantages-section__item--two::before {
     content: "";
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 80px;
     background-image: url(../images/advantages/apple-bucket.png);
+    background-repeat: no-repeat;
+    border: 2px solid transparent;
+    border-radius: 50%;
+    background-position: center;
+    animation: animate150 2500ms infinite 1000ms;
 }
 
 .advantages-section__item--three::before {
     content: "";
-    width: 46px;
-    height: 50px;
+    width: 80px;
+    height: 80px;
     background-image: url(../images/advantages/heart.png);
+    background-repeat: no-repeat;
+    border: 2px solid transparent;
+    border-radius: 50%;
+    background-position: center;
+    animation: animate150 2500ms infinite 1000ms;
 }
+
+@keyframes animate150 {
+    0% {
+      transform: scale(1);
+    }
+  
+    50% {
+      transform: scale(1.5);
+    }
+  
+    100% {
+      transform: scale(1);
+    }
+  }
 
 @media screen and (max-width :767px) {
     .advantages-section__list {
