--- a/src/sass/components/_about-modal.scss
+++ b/src/sass/components/_about-modal.scss
@@ -1,5 +1,5 @@
 .modal {
-    background: rgba(0, 0, 0, 0.2);
+    // background: rgba(0, 0, 0, 0.2);
     position: fixed;
     width: 100%;
     height: 100%;
@@ -13,7 +13,7 @@
         width: 300px;
         height: 400px;
         background: #FFF5F6;
-        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+        box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 4px;
         padding: 40px;
         svg {
