--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -2,15 +2,12 @@
     background: #FFF5F6;  
     background-repeat: no-repeat; 
     padding: 60px 16px 16px 20px;
-    // &__container {
-                    
-    //     }
     &__subtitle{
         font-family: 'Titan One';
         font-style: normal;
         font-weight: 400;
-        font-size: 18px;
-        line-height: 21px;
+        font-size: 26px;
+        line-height: 30px;
         text-align: center;
         text-transform: uppercase;
         color: #FFA5BA;
@@ -19,12 +16,13 @@
         font-family: 'Titan One';
         font-style: normal;
         font-weight: 400;
-        font-size: 34px;
-        line-height: 39px;
+        font-size: 48px;
+        line-height: 55px;
         text-align: center;
         letter-spacing: 0.04em;
         text-transform: uppercase;
         color: #D41443;
+        animation: animate150 7000ms infinite 1000ms;
     }
     &__subtitle,
     &__title {
@@ -37,23 +35,52 @@
     }
 }
 
+
+@keyframes animate150 {
+    0% {
+      transform: scale(1);
+    }
+  
+    50% {
+      transform: scale(1.5);
+    }
+  
+    100% {
+      transform: scale(1);
+    }
+  }
+
 .description {
     &__list {
         display: flex;
         flex-direction: column;
         gap: 40px;
     }
-    &__main-text,
-    &__secondary_text {
+    &__main-text {
         font-family: 'DM Sans';
         font-style: normal;
         font-weight: 500;
         font-size: 12px;
         line-height: 19px;
         color: #000000;
+        transform: scale (1);
+        transition: all 500ms ease-in-out;
+        &:hover {
+            transform: scale(1.1);
+        }
     }
     &__secondary-text {
+        font-family: 'DM Sans';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 19px;
         color: #907E82;
+        transform: scale (1);
+        transition: all 500ms ease-in-out;
+        &:hover {
+            transform: scale(1.1);
+        }    
     }
     button {        
         width: 176px;
@@ -75,15 +102,45 @@
         }        
     }
 }
+
+.about-section__item-image {
+    animation: rotating 10000ms linear infinite;
+}
+
+@keyframes rotating {
+    0%{
+      transform: rotate(0deg);
+    }
+  
+    33%{
+      transform: rotate(30deg);
+    }
+  
+    66% {
+      transform: rotate(-30deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
+  }
+
 @media screen and (max-width :767px) {
     .about-section{
         background-image: url(../images/about/milk-M-1x.png);
-        background-size: 90%; 
+        background-size: 100%; 
         background-position: bottom;  
         &__list {
             flex-wrap: wrap;
             padding-right: 80px;
-        }     
+        } 
+        &__subtitle {
+            font-size: 18px;
+            line-height: 21px;
+        }
+        &__title {
+            font-size: 34px;
+            line-height: 39px;
+        }    
     }    
 }
 
@@ -98,6 +155,7 @@
     .about-section{
         background-image: url(../images/about/milk-D-1x.png);
         background-position: center;
+        background-size: 100%;
         &__list {
             align-items: center;
         }
