--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -14,13 +14,13 @@
             <div class="products__wrapper1">
                 <h3 class="products__subtitle">ice cream</h3>
                 <div class="products__svg">
-                    <svg class="products__svg--dots" width="6" height="6">
+                    <svg width="6" height="6">
                         <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
                     </svg>
-                    <svg class="products__dots" width="6" height="6">
+                    <svg width="6" height="6">
                         <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
                     </svg>
-                    <svg class="products__dots" width="6" height="6">
+                    <svg width="6" height="6">
                         <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
                     </svg>
                 </div>
@@ -38,13 +38,13 @@
             <div class="products__wrapper2">
                 <h3 class="products__subtitle">ice coffee</h3>
                 <div class="products__svg">
-                    <svg class="products__dots" width="6" height="6">
+                    <svg width="6" height="6">
                         <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
                     </svg>
-                    <svg class="products__dots" width="6" height="6">
+                    <svg width="6" height="6">
                         <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
                     </svg>
-                    <svg class="products__dots" width="6" height="6">
+                    <svg width="6" height="6">
                         <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
                     </svg>
                 </div>
@@ -61,13 +61,13 @@
             <div class="products__wrapper3">
                 <h3 class="products__subtitle">milkshakes</h3>
                 <div class="products__svg">
-                    <svg class="products__dots" width="6" height="6">
+                    <svg width="6" height="6">
                         <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
                     </svg>
-                    <svg class="products__dots" width="6" height="6">
+                    <svg width="6" height="6">
                         <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
                     </svg>
-                    <svg class="products__dots" width="6" height="6">
+                    <svg width="6" height="6">
                         <use href="/src/images/products-svgs/products-icons.svg#icon-white-dot"></use>
                     </svg>
                 </div>
