--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -33,6 +33,18 @@
   line-height: 34px;
   letter-spacing: 0.04em;
   text-transform: uppercase;
+
+  // For tablets
+  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+    font-size: 26px;
+    line-height: 30px;
+  }
+
+  // For mobile devices
+  @media only screen and (max-width: 767px) {
+    font-size: 18px;
+    line-height: 21px;
+  }
 }
 
 .p-titles__heading {
@@ -44,6 +56,21 @@
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #d41443;
+
+  // For tablets
+  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+    font-size: 48px;
+    line-height: 55px;
+    letter-spacing: 0.04em;
+  }
+
+  // For mobile devices
+  @media only screen and (max-width: 767px) {
+    font-size: 34px;
+    line-height: 39px;
+    text-align: center;
+    letter-spacing: 0.04em;
+  }
 }
 
 /** Products drinks grid **/
@@ -59,6 +86,14 @@
 
 .products__image {
   position: relative;
+
+  // For tablets
+  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+    width: 224px;
+    height: 473px;
+    top: -250px;
+    padding-top: 200px;
+  }
 }
 
 .products__wrapper1 {
@@ -73,6 +108,31 @@
   top: 264px;
   z-index: -1;
   padding-top: 154px;
+
+  // For tablets
+  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+    width: 224px;
+    height: 473px;
+    top: 250px;
+    z-index: -1;
+    padding-top: 154px;
+    left: 0;
+    right: 0;
+    bottom: 20px;
+    margin: auto;
+  }
+
+  // For mobile devices
+  @media only screen and (max-width: 767px) {
+    width: 100%;
+    height: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    padding-top: 50px;
+  }
 
   &:hover {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
@@ -95,6 +155,19 @@
   z-index: -1;
   padding-top: 154px;
 
+  // For tablets
+  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+    width: 224px;
+    height: 473px;
+    top: 250px;
+    z-index: -1;
+    padding-top: 154px;
+    left: 0;
+    right: 0;
+    bottom: 20px;
+    margin: auto;
+  }
+
   &:hover {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     transition-duration: 0.5s;
@@ -116,6 +189,19 @@
   z-index: -1;
   padding-top: 154px;
 
+  // For tablets
+  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+    width: 224px;
+    height: 473px;
+    top: 250px;
+    z-index: -1;
+    padding-top: 154px;
+    left: 0;
+    right: 0;
+    bottom: 20px;
+    margin: auto;
+  }
+
   &:hover {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     transition-duration: 0.5s;
@@ -134,12 +220,23 @@
   text-transform: uppercase;
   color: #ffffff;
   margin-bottom: 32px;
+
+  // For tablets
+  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+    margin-top: -12px;
+  }
 }
 
 .products__svg {
   display: flex;
   gap: 4px;
   margin-bottom: 12px;
+
+  // For tablets
+  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+    margin-top: -12px;
+    margin-bottom: 0px;
+  }
 }
 
 .products__text {
@@ -151,6 +248,12 @@
   letter-spacing: 0.04em;
   color: #ffffff;
   margin-bottom: 12px;
+
+  // For tablets
+  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+    width: 160px;
+    height: 150px;
+  }
 }
 
 .products__arrow {
@@ -160,10 +263,20 @@
   margin-top: 60px;
   margin-bottom: 60px;
 
+  // For tablets
+  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+    margin-top: 44px;
+    margin-bottom: 0px;
+  }
+
   &:hover {
     background-color: #ffa5ba;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
 
-/** Products hover **/
+/** Products responsive **/
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  // Your styles here
+}
