IC-Group-4-main-first-update

--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,1 +1,41 @@
-@import '~node_modules/modern-normalize/modern-normalize.css';
+* {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  padding-inline-start: 0;
+}
+body {
+  background-color: var(--brand-color-white);
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  font-style: normal;
+  color: var(--brand-color-gray-light);
+  line-height: 1.14;
+}
+img {
+  display: block;
+}
+.container {
+  margin: 0px auto;
+  width: 320px;
+  padding: 0 15px;
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
+
+
+
+
+
+
+
