--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,3 +1,9 @@
 @import './components/common';
-@import './components/example';
 @import './components/products-section';
+@import './components/customer-rev-section';
+@import './components/about-section';
+@import './components/advantages-section';
+@import './components/contact-section';
+@import './components/footer-section';
+@import './components/galery-section';
+@import './components/hero-header-section';
