--- a/src/partials/about-advantages.html
+++ b/src/partials/about-advantages.html
@@ -15,10 +15,11 @@
         <div class="modal is-hidden" data-modal>
             <div class="inner-div">
                 <button data-modal-close class="close-button">
-                    <svg width="11" height="11">
+                    <svg width="15" height="15">
                     <use href="images/icons-svg.svg#icon-close"></use>
                     </svg>
-                </button>                               
+                </button>   
+                <p class="description__secondary-text">Ice cream is a frozen dessert, typically made from milk or cream and flavoured with a sweetener, either sugar or an alternative, and a spice, such as cocoa or vanilla, or with fruit such as strawberries or peaches. It can also be made by whisking a flavored cream base and liquid nitrogen together. Food coloring is sometimes added, in addition to stabilizers. The mixture is cooled below the freezing point of water and stirred to incorporate air spaces and to prevent detectable ice crystals from forming. The result is a smooth, semi-solid foam that is solid at very low temperatures (below 2 °C or 35 °F). It becomes more malleable as its temperature increases.</p>                            
             </div>
         </div>
         <main>
