--- a/src/partials/products-section.html
+++ b/src/partials/products-section.html
@@ -3,7 +3,7 @@
     <p class="products__label">100% natural</p>
     <h2 class="products__title">PRODUCTS</h2>
     <ul class="products__list">
-      <li class="products__item">
+      <li class="products__list-item">
         <h3>ice cream</h3>
         <div>...</div>
         <p>
@@ -11,7 +11,7 @@
           eiusmod tempor incididunt ut labore et
         </p>
       </li>
-      <li class="products__item">
+      <li class="products__list-item">
         <h3>ice coffee</h3>
         <div>...</div>
         <p>
@@ -19,7 +19,7 @@
           eiusmod tempor incididunt ut labore et
         </p>
       </li>
-      <li class="products__item">
+      <li class="products__list-item">
         <h3>milkshakes</h3>
         <div>...</div>
         <p>
