--- a/src/sass/components/_products-section.scss
+++ b/src/sass/components/_products-section.scss
@@ -1,32 +1,27 @@
+@import '/src/sass/utils/vars';
 .products {
   &__label {
-    font-family: 'Titan One';
-    font-style: normal;
-    font-weight: 400;
     font-size: 30px;
     line-height: 1.13;
     text-align: center;
     letter-spacing: 0.04em;
     text-transform: uppercase;
-    color: #ffa5ba;
+    color: $secondaryColor;
   }
   &__title {
-    font-family: 'Titan One';
-    font-style: normal;
-    font-weight: 400;
     font-size: 58px;
     line-height: 1.13;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
-    color: #d41443;
+    color: $primaryColor;
   }
   &__list {
     display: flex;
     gap: 32px;
     flex-direction: row;
   }
-  &__item {
+  &__list-item {
     list-style: none;
     display: flex;
     flex-direction: column;
@@ -36,7 +31,7 @@
     border-radius: 24px;
     background-color: #f0d1a5;
     &:first-child {
-      background-color: #ffb8ca;
+      background-color: $primaryBackgroundColor;
     }
     &:last-child {
       background-color: #c2e297;
