mobile responsive done

--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -7,7 +7,6 @@
 }
 
 .p-section {
-  width: 1200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -78,10 +77,32 @@
   display: flex;
   flex-direction: row;
   gap: 32px;
+
+  // For tablets
+  @media only screen and (min-width: 768px) and (max-width: 1024px) {
+    margin-right: 32px;
+    gap: 16px;
+  }
+
+  // For mobile devices
+  @media only screen and (max-width: 767px) {
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
+    gap: 455px;
+    margin-right: 40px;
+  }
 }
 
 .products {
   position: relative;
+
+  // For mobile devices
+  @media only screen and (max-width: 767px) {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .products__image {
@@ -93,6 +114,13 @@
     height: 473px;
     top: -250px;
     padding-top: 200px;
+  }
+
+  // For mobile devices
+  @media only screen and (max-width: 767px) {
+    width: 100%;
+    height: auto;
+    margin-bottom: 10px;
   }
 }
 
@@ -125,13 +153,6 @@
   // For mobile devices
   @media only screen and (max-width: 767px) {
     width: 100%;
-    height: auto;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    padding-top: 50px;
   }
 
   &:hover {
@@ -168,6 +189,11 @@
     margin: auto;
   }
 
+  // For mobile devices
+  @media only screen and (max-width: 767px) {
+    width: 100%;
+  }
+
   &:hover {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     transition-duration: 0.5s;
@@ -200,6 +226,11 @@
     right: 0;
     bottom: 20px;
     margin: auto;
+  }
+
+  // For mobile devices
+  @media only screen and (max-width: 767px) {
+    width: 100%;
   }
 
   &:hover {
