update_customer-rev-section

--- a/src/sass/components/_customer-rev-section.scss
+++ b/src/sass/components/_customer-rev-section.scss
@@ -18,7 +18,10 @@
     padding: 32px 74px 31px 72px;
     background: #fafafa;
     width: 968px;
-  }
+    position: relative;
+
+   
+}
   &__review {
     font-weight: 500;
     font-size: 16px;
@@ -39,14 +42,18 @@
       height: 40px;
       width: 54px; 
       z-index: -1;
+      
+      
     }
     &::after {
-        content: '';
-        background-image: repeating-linear-gradient(#E1E1E1 0, #E1E1E1 1px, transparent 0, transparent 31px);
+        content: "";
         position: absolute;
+        top: 100%;
         width: 100%;
-      
-       
+        left: 0;
+        height: 1px;
+        background: repeating-linear-gradient(111.3deg, #E1E1E1, #E1E1E1);
+    
     }      
 
   }
