--- a/src/sass/components/_about-modal.scss
+++ b/src/sass/components/_about-modal.scss
@@ -43,6 +43,15 @@
     }
 }
 
+.description {
+    font-family: 'DM Sans';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 19px;
+        color: #907E82;
+}
+
 .is-hidden {
     visibility: hidden;
     opacity: 0;
