--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -6,8 +6,8 @@
         font-family: 'Titan One';
         font-style: normal;
         font-weight: 400;
-        font-size: 26px;
-        line-height: 30px;
+        font-size: 18px;
+        line-height: 21px;
         text-align: center;
         text-transform: uppercase;
         color: #FFA5BA;
@@ -16,8 +16,8 @@
         font-family: 'Titan One';
         font-style: normal;
         font-weight: 400;
-        font-size: 48px;
-        line-height: 55px;
+        font-size: 34px;
+        line-height: 39px;
         text-align: center;
         letter-spacing: 0.04em;
         text-transform: uppercase;
@@ -118,20 +118,29 @@
             flex-wrap: wrap;
             padding-right: 80px;
         } 
-        &__subtitle {
-            font-size: 18px;
-            line-height: 21px;
-        }
-        &__title {
-            font-size: 34px;
-            line-height: 39px;
-        }    
-    }    
+    }
 }
 
 @media screen and (min-width :768px) and (max-width :1199px) {
-    .about-section__list {
-        align-items: center;
+    .about-section {
+        &__list {
+            align-items: center;
+        }
+        &__subtitle {
+            font-size: 26px;
+            line-height: 30px;
+        }
+        &__title {
+            font-size: 48px;
+            line-height: 55px;
+        } 
+    }       
+    .description{
+        &__main-text,
+        &__secondary-text {
+            font-size: 14px;
+            line-height: 25px;
+        }
     }
 }  
 
@@ -140,10 +149,28 @@
         background-image: url(../images/about/milk-D-1x.png);
         background-position: center;
         background-size: 100%;
-        &__list {
-            align-items: center;
+            &__list {
+                align-items: center;
+            }
+            &__subtitle {
+                font-size: 30px;
+                line-height: 34px;
+            }
+            &__title {
+                font-size: 58px;
+                line-height: 66px;
+            }    
+        }    
+    .description{
+        &__main-text {
+            font-size: 16px;
+            line-height: 28px;
         }
-    }    
+        &__secondary-text {
+            font-size: 14px;
+            line-height: 27px;
+        }
+    }   
 }
 
 @media screen and (min-width :768px) {
