--- a/src/sass/components/_advantages.scss
+++ b/src/sass/components/_advantages.scss
@@ -14,8 +14,8 @@
         font-family: 'Titan One';
         font-style: normal;
         font-weight: 400;
-        font-size: 58px;
-        line-height: 66px;
+        font-size: 36px;
+        line-height: 41px;
         // text-align: right;
         letter-spacing: 0.04em;
         text-transform: uppercase;
@@ -25,9 +25,8 @@
         font-family: 'DM Sans';
         font-style: normal;
         font-weight: 700;
-        font-size: 16px;
-        line-height: 18px;
-        letter-spacing: 0.02em;
+        font-size: 12px;
+        line-height: 20px;
         color: #000000;       
     }
     svg {
@@ -91,3 +90,33 @@
         padding: 0px 70px 0px 20px;            
     }     
 }    
+
+@media screen and (min-width :768px) and (max-width :1199px) {
+    .advantages-section {
+        &__item-title {
+            font-size: 48px;
+            line-height: 55px;
+            letter-spacing: 0.04em;
+        }
+        &__item-description {
+            font-size: 14px;
+            line-height: 25px;
+
+        }
+    }
+}
+
+@media screen and (min-width : 1200px) {
+    .advantages-section {
+        &__item-title {
+            font-size: 58px;
+            line-height: 66px;
+            letter-spacing: 0.04em;
+        }
+        &__item-description {
+            font-size: 16px;
+            line-height: 28px;
+            letter-spacing: 0.02em;
+        }
+    }
+}
