--- a/src/partials/about-advantages.html
+++ b/src/partials/about-advantages.html
@@ -60,9 +60,9 @@
                                             Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. 
                                             Mauris rhoncus orci in imperdiet placerat. 
                                             Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. 
-                                            Cras massa nibh, tincidunt. 
-                                            <span>Aliquam erat volutpat. Aenean accumsan.</span>
+                                            Cras massa nibh, tincidunt.
                                         </p>
+                                        <p class="description__secondary-text">Aliquam erat volutpat. Aenean accumsan.</p>
                                     </li>
                                     <li class="description__item">
                                         <button data-modal-open class="button" type="button">
