--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -77,6 +77,7 @@
   display: flex;
   flex-direction: row;
   gap: 32px;
+  margin-bottom: 60px;
 
   // For tablets
   @media only screen and (min-width: 768px) and (max-width: 1024px) {
@@ -113,14 +114,14 @@
     width: 224px;
     height: 473px;
     top: -250px;
-    padding-top: 200px;
+    padding-top: 220px;
   }
 
   // For mobile devices
   @media only screen and (max-width: 767px) {
     width: 100%;
     height: auto;
-    margin-bottom: 10px;
+    margin-top: -20px;
   }
 }
 
@@ -153,6 +154,9 @@
   // For mobile devices
   @media only screen and (max-width: 767px) {
     width: 100%;
+    height: 535px;
+    top: 180px;
+    padding-top: 150px;
   }
 
   &:hover {
@@ -192,6 +196,9 @@
   // For mobile devices
   @media only screen and (max-width: 767px) {
     width: 100%;
+    height: 535px;
+    top: 180px;
+    padding-top: 150px;
   }
 
   &:hover {
@@ -231,6 +238,9 @@
   // For mobile devices
   @media only screen and (max-width: 767px) {
     width: 100%;
+    height: 535px;
+    top: 180px;
+    padding-top: 150px;
   }
 
   &:hover {
@@ -296,18 +306,16 @@
 
   // For tablets
   @media only screen and (min-width: 768px) and (max-width: 1024px) {
-    margin-top: 44px;
-    margin-bottom: 0px;
+    margin-top: 40px;
+  }
+
+  // For mobile devices
+  @media only screen and (max-width: 767px) {
+    margin: 40px;
   }
 
   &:hover {
     background-color: #ffa5ba;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-}
-
-/** Products responsive **/
-
-@media only screen and (min-width: 768px) and (max-width: 1024px) {
-  // Your styles here
 }
