--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -1,8 +1,8 @@
 $color_1: #ffa5ba;
 $color_2: #d41443;
 $color_3: #ffffff;
-$font-family_1: "Titan One";
-$font-family_2: "DM Sans";
+$font-family_1: 'Titan One';
+$font-family_2: 'DM Sans';
 $background-color_1: #fff0f5;
 
 .container {
@@ -11,6 +11,10 @@ $background-color_1: #fff0f5;
 }
 ul {
   list-style: none;
+}
+
+.products__section {
+  padding-bottom: 30px;
 }
 .products__subtitle {
   font-family: $font-family_1;
@@ -47,16 +51,18 @@ ul {
   height: 489px;
   width: 280px;
   margin-top: 150px;
+  margin-bottom: 30px;
+
   &:nth-child(2) {
     background: #f0d1a5;
     border-radius: 24px;
     &::before {
-      content: "";
+      content: '';
       position: absolute;
-      top: 880px;
+      top: 900px;
       width: 280px;
       height: 280px;
-      background-image: url(/images/icecoffee.png);
+      background-image: url(/src/images/products/icecoffee.png);
       background-size: 280px 280px;
     }
   }
@@ -64,22 +70,22 @@ ul {
     background: #c2e297;
     border-radius: 24px;
     &::before {
-      content: "";
+      content: '';
       position: absolute;
-      top: 1550px;
+      top: 1600px;
       width: 280px;
       height: 280px;
-      background-image: url(/images/milkshake.png);
+      background-image: url(/src/images/products/milkshake.png);
       background-size: 280px 280px;
     }
   }
   &::before {
-    content: "";
+    content: '';
     position: absolute;
-    top: 180px;
+    top: 210px;
     width: 280px;
     height: 280px;
-    background-image: url(/images/icecream.png);
+    background-image: url(/src/images/products/icecream.png);
     background-size: 280px 280px;
   }
   &:hover {
@@ -126,7 +132,7 @@ ul {
   position: relative;
   border: none;
   left: 120px;
-  top: 40px;
+  top: 80px;
   transition-property: transform;
   transition-duration: 500ms;
   transition-timing-function: linear;
@@ -148,6 +154,7 @@ ul {
   border-radius: 50%;
   margin: 0 auto;
   position: relative;
+  margin-top: 30px;
   &::before {
     width: 6px;
     height: 6px;
@@ -155,7 +162,7 @@ ul {
     border-radius: 50%;
     margin: 0 auto;
     position: relative;
-    content: "";
+    content: '';
     position: absolute;
     top: 0px;
     right: 12px;
@@ -167,7 +174,7 @@ ul {
     border-radius: 50%;
     margin: 0 auto;
     position: relative;
-    content: "";
+    content: '';
     position: absolute;
     top: 0;
     left: 12px;
@@ -185,7 +192,7 @@ ul {
   visibility: hidden;
   border-radius: 24px;
   margin-left: 5px;
-  bottom: 420px;
+  bottom: 380px;
 }
 @media screen and (min-width: 768px) {
   .container {
@@ -204,33 +211,33 @@ ul {
     margin-top: 100px;
     justify-content: center;
     &::before {
-      content: "";
+      content: '';
       position: absolute;
-      top: 180px;
+      top: 200px;
       width: 224px;
       height: 224px;
-      background-image: url(/images/icecream.png);
+      background-image: url(/src/images/products/icecream.png);
       background-size: 224px 224px;
     }
     &:nth-child(2) {
       &::before {
-        content: "";
+        content: '';
         position: absolute;
-        top: 180px;
+        top: 200px;
         width: 224px;
         height: 224px;
-        background-image: url(/images/icecoffee.png);
+        background-image: url(/src/images/products/icecoffee.png);
         background-size: 224px 224px;
       }
     }
     &:nth-child(3) {
       &::before {
-        content: "";
+        content: '';
         position: absolute;
-        top: 180px;
+        top: 200px;
         width: 224px;
         height: 224px;
-        background-image: url(/images/milkshake.png);
+        background-image: url(/src/images/products/milkshake.png);
         background-size: 224px 224px;
       }
     }
@@ -242,7 +249,7 @@ ul {
     position: relative;
     border: none;
     left: 90px;
-    top: 30px;
+    top: 70px;
     transition-property: transform;
     transition-duration: 500ms;
     transition-timing-function: linear;
@@ -263,10 +270,13 @@ ul {
     justify-content: center;
     border-radius: 24px;
     margin-left: 5px;
-    bottom: 200px;
+    bottom: 70px;
   }
   .products__type {
     padding-top: 90px;
+  }
+  .products__list {
+    margin-bottom: 70px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -286,33 +296,33 @@ ul {
     width: 368px;
     margin-top: 250px;
     &::before {
-      content: "";
+      content: '';
       position: absolute;
-      top: 190px;
+      top: 220px;
       width: 368px;
       height: 394px;
-      background-image: url(/images/icecream.png);
+      background-image: url(/src/images/products/icecream.png);
       background-size: 368px 394px;
     }
     &:nth-child(2) {
       &::before {
-        content: "";
+        content: '';
         position: absolute;
-        top: 190px;
+        top: 220px;
         width: 368px;
         height: 394px;
-        background-image: url(/images/icecoffee.png);
+        background-image: url(/src/images/products/icecoffee.png);
         background-size: 368px 394px;
       }
     }
     &:nth-child(3) {
       &::before {
-        content: "";
+        content: '';
         position: absolute;
-        top: 190px;
+        top: 220px;
         width: 368px;
         height: 394px;
-        background-image: url(/images/milkshake.png);
+        background-image: url(/src/images/products/milkshake.png);
         background-size: 368px 394px;
       }
     }
@@ -324,7 +334,7 @@ ul {
     position: relative;
     border: none;
     left: 160px;
-    top: 100px;
+    top: 140px;
     transition-property: transform;
     transition-duration: 500ms;
     transition-timing-function: linear;
@@ -345,9 +355,12 @@ ul {
     justify-content: center;
     border-radius: 24px;
     margin-left: 10px;
-    bottom: -20px;
+    bottom: -160px;
   }
   .products__type {
     padding-top: 150px;
+  }
+  .products__list {
+    margin-bottom: 70px;
   }
 }
