--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,22 +1,25 @@
 @import './common';
 @import './example';
-@import "./components/about-modal";
-@import "./components/about";
-@import "./components/advantages";
+@import './components/about-modal';
+@import './components/about';
+@import './components/advantages';
+@import './components/products';
 
-.container{
-    margin: 0 auto;
-    min-width: 320px;
-    max-width: 1250px;
+.container {
+  margin: 0 auto;
+  min-width: 320px;
+  max-width: 1250px;
 }
 
 .unstyled-list {
-    list-style: none;
+  list-style: none;
 }
 
-ul ,h3 {margin-block-start: 0px;
-    margin-block-end: 0px;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 0px;
+ul,
+h3 {
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0px;
 }
