gallery-branch/second

--- a/src/sass/components/_galery-section.scss
+++ b/src/sass/components/_galery-section.scss
@@ -1,7 +1,7 @@
 @import 'src/sass/utils/_vars.scss';
 
 .gallery {
-    background-image: linear-gradient(to top,#E5E5E5 80%,#FFF5F6 30%);
+    background-image: linear-gradient(to top,#E5E5E5 80%, $secondBackgroundColor 30%);
     padding-bottom: 60px;   
     @media screen and (min-width: 768px) {
         padding-bottom: 60px; 
