--- a/src/sass/_howitsmade.scss
+++ b/src/sass/_howitsmade.scss
@@ -4,6 +4,8 @@
    text-align: center;
    text-transform: uppercase;
    margin: 0px auto;
+   position: relative;
+   background-color: #FFF5F6;
 
    &__subtitle{
    font-family: 'Titan One';
@@ -20,6 +22,7 @@
    letter-spacing: 0.06em;
    color: $primary-color;
    }
+   
 }
 
 .made-section{
@@ -27,22 +30,24 @@
     background-repeat: no-repeat;
     font-family: 'DM Sans';
     font-style: normal;
-
     display: flex;
-    gap: 99px;
+
 
     &__divimage{
-       
+       margin-right: 99px;
     }
 
-    &__image{
+    // &__image{
 
-    }
+    // }
 
     &__text{
         font-weight: 500;
         letter-spacing: 0.04em;
         text-align: left;
+        display: flex;
+        flex-direction: column;
+        // align-items: start;
     }
 
     &__button{
@@ -58,6 +63,7 @@
         text-align: center;
         color: $primary-color;
         position: absolute;
+        top: 632px;
         
     }
 }
@@ -68,7 +74,6 @@
     line-height: 176%;
     color: $black-color;
     padding-top: 90px;
-    padding-bottom: 32px;
 }
 
 .made-section__text--text2{
@@ -84,3 +89,63 @@
     line-height: 194%;
     color: $gray-color;
 }
+
+.container{
+    width: 1200px;
+    margin: 0px auto;
+
+}
+
+.quantity{
+
+    &__list{
+        display: flex;
+        list-style: none;
+        margin: 0px;
+        padding-bottom: 209px;
+        
+    }
+
+    &__item{
+        font-style: normal;
+
+        
+    }
+
+    &__svg-container{
+        display: flex;
+        flex-direction: column;
+        // align-items: start;
+        
+    }
+
+    &__svg{
+        fill: $svg-background;
+        width: 33px;
+        height: 50px;
+        padding-bottom: 40px;
+    }
+
+    &__title{
+        font-family: 'Titan One';
+        font-weight: 400;
+        font-size: 58px;
+        line-height: 66px;
+        letter-spacing: 0.04em;
+        text-transform: uppercase;
+        color: $primary-color;
+    }
+
+    &__text{
+        font-family: 'DM Sans';
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 28px;
+        letter-spacing: 0.02em;
+        color: $black-color;
+    }
+
+}
+
+
+
