--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -9,6 +9,8 @@ body {
   text-align: center;
   text-transform: uppercase;
   margin: 0px auto;
+  position: relative;
+  background-color: #FFF5F6;
 }
 .made__subtitle {
   font-family: "Titan One";
@@ -31,11 +33,16 @@ body {
   font-family: "DM Sans";
   font-style: normal;
   display: flex;
-  gap: 99px;
+}
+.made-section__divimage {
+  margin-right: 99px;
 }
 .made-section__text {
   font-weight: 500;
   letter-spacing: 0.04em;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
 }
 .made-section__button {
   width: 176px;
@@ -50,6 +57,7 @@ body {
   text-align: center;
   color: #d41443;
   position: absolute;
+  top: 632px;
 }
 
 .made-section__text--text1 {
@@ -57,11 +65,58 @@ body {
   line-height: 176%;
   color: #000000;
   padding-top: 90px;
-  padding-bottom: 32px;
 }
 
 .made-section__text--text2 {
   font-size: 14px;
   line-height: 194%;
   color: #907e82;
+}
+
+.made-section__text--text3 {
+  font-size: 14px;
+  line-height: 194%;
+  color: #907e82;
+}
+
+.container {
+  width: 1200px;
+  margin: 0px auto;
+}
+
+.quantity__list {
+  display: flex;
+  list-style: none;
+  margin: 0px;
+  padding-bottom: 209px;
+}
+.quantity__item {
+  font-style: normal;
+}
+.quantity__svg-container {
+  display: flex;
+  flex-direction: column;
+}
+.quantity__svg {
+  fill: #fea5bb;
+  width: 33px;
+  height: 50px;
+  padding-bottom: 40px;
+}
+.quantity__title {
+  font-family: "Titan One";
+  font-weight: 400;
+  font-size: 58px;
+  line-height: 66px;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #d41443;
+}
+.quantity__text {
+  font-family: "DM Sans";
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  color: #000000;
 }/*# sourceMappingURL=main.css.map */
