--- a/src/partials/howitsmade.html
+++ b/src/partials/howitsmade.html
@@ -30,9 +30,49 @@
                         <p class="made-section__text made-section__text--text2">Curabitur lacinia enim at ex blandit, vel pellentesque odio <br> elementum. Mauris rhoncus orci in imperdiet placerat. <br> Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna <br> maximus. Cras massa nibh, tincidunt. <br>
                             </p>
                         <p class="made-section__text made-section__text--text3">Aliquam erat volutpat. Aenean accumsan.</p>
+                    
+                        <button data-modal-open class="made-section__button" type="button">Read more 
+                        <!-- <svg class=""> 
+                            <use href="./images/icons-svg.svg#icon-Vector-1"></use>
+                        </svg> -->
+                    </button>
+                    
                     </div>
-                    <button data-modal-open class="made-section__button" type="button">Read more > </button>
+                   
+            </div>
+            <section class="third-section quantity">
+                <div class="quantity__container">
+                    <ul class="quantity__list">
+                        <li class="quantity__item">
+                            <div class="quantity__svg-container">
+                                <svg class="quantity__svg">
+                                    <use href="/src/images/icons-svg.svg#icon-Group-1"></use>
+                                </svg>
+                                <h3 class="quantity__title">721</h3>
+                                <p class="quantity__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+                            </div>
+                        </li>
+                        <li class="quantity__item">
+                            <div class="quantity__svg-container">
+                                <svg class="quantity__svg">
+                                    <use href="/src/images/icons-svg.svg#icon-Group-1"></use>
+                                </svg>
+                                <h3 class="quantity__title">16kg</h3>
+                                <p class="quantity__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+                            </div>
+                        </li>
+                        <li class="quantity__item">
+                            <div class="quantity__svg-container">
+                                <svg class="quantity__svg">
+                                    <use href="/src/images/icons-svg.svg#icon-Group-1"></use>
+                                </svg>
+                                <h3 class="quantity__title">84</h3>
+                                <p class="quantity__text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
+            </section>
 
         </section>
     </main>
