--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,6 +3,7 @@
 <section class="contacts">
   <div class="container contacts__inner-section">
     <div class="contacts__inner">
+      <h2 class="contacts__title-1">Contact</h2>
       <ul class="contacts__items unstyled-list">
         <li class="contacts__title"><p>CAFE</p></li>
         <li class="contacts__subtitle"><h3>Chicago</h3></li>
@@ -14,8 +15,12 @@
       <ul class="time-schedule unstyled-list">
         <li class="time-schedule__days"><h3>Monday - Friday</h3></li>
         <li class="time-schedule__hours"><p>06:00 AM - 10:00 PM</p></li>
-        <li class="time-schedule__days"><h3>Saturday - Sunday</h3></li>
-        <li class="time-schedule__hours"><p>08:00 AM - 16:00 PM</p></li>
+        <li class="time-schedule__days time-schedule--days2">
+          <h3>Saturday - Sunday</h3>
+        </li>
+        <li class="time-schedule__hours">
+          <p>08:00 AM - 16:00 PM</p>
+        </li>
       </ul>
 
       <ul class="contacts-list unstyled-list">
@@ -101,7 +106,7 @@
     <div class="buttons">
       <ul class="buttons__list unstyled-list">
         <li>
-          <button class="buttons__items">
+          <button data-modal-open-2 class="buttons__items">
             Our Locations
             <svg class="buttons__svg" width="4.43" height="8">
               <use href="/src/images/icons-footer.svg#icon-button"></use>
