--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -7,41 +7,57 @@
 }
 .container {
   margin: 0 auto;
-  width: 1200px;
+  width: 320px;
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 .unstyled-list {
   list-style: none;
 }
 
 /*Contacts*/
+.contacts__title-1 {
+  display: none;
+}
 .contacts {
   background-color: $secondary-background-color;
 
   &__inner {
     box-sizing: border-box;
-    padding-left: 40px;
-    padding-right: 40px;
-    width: 360px;
+    padding-left: 32px;
+    padding-right: 32px;
+    width: 280px;
     background-color: white;
     box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
     border-radius: 24px;
   }
   &__inner:hover {
     border: 3px dotted $primary-color;
+    box-shadow: 0 8px 30px rgba(144, 35, 62, 0.632);
     cursor: pointer;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
   &__inner-section {
     display: flex;
-    gap: 32px;
+    flex-direction: column;
+    gap: 20px;
     justify-content: center;
+    align-items: center;
   }
 
   &__title {
     font-family: 'DM Sans';
     font-style: normal;
     font-weight: $font-weight-500;
-    font-size: $font-size-16;
+    font-size: 12px;
     letter-spacing: 0.04em;
     color: $white-color;
     border-radius: 6px;
@@ -66,7 +82,7 @@
     font-size: $font-size-14;
     letter-spacing: 0.04em;
     color: $black-color;
-    padding-top: 32px;
+    padding-top: 20px;
     padding-bottom: 8px;
   }
 
@@ -79,12 +95,12 @@
     letter-spacing: 0.04em;
     color: $gray-color;
     border-bottom: 1px solid #e1e1e1;
-    padding-bottom: 32px;
+    padding-bottom: 24px;
   }
 }
 .time-schedule {
   border-bottom: 1px solid #e1e1e1;
-  padding-bottom: 32px;
+  padding-bottom: 24px;
 
   &__days {
     font-family: 'DM Sans';
@@ -94,7 +110,10 @@
     line-height: 186%;
     letter-spacing: 0.04em;
     color: $black-color;
-    padding-top: 32px;
+    padding-top: 24px;
+  }
+  .time-schedule--days2 {
+    padding-top: 8px;
   }
   &__hours {
     font-family: 'DM Sans';
@@ -107,7 +126,7 @@
 }
 
 .contacts-list {
-  padding-top: 32px;
+  padding-top: 24px;
   padding-bottom: 40px;
 
   &__tel {
@@ -138,6 +157,99 @@
     cursor: pointer;
   }
 }
+/*Media-contacts-768*/
+@media screen and (min-width: 768px) {
+  .contacts {
+    &__inner-section {
+      flex-direction: row;
+      justify-content: center;
+      gap: 32px;
+    }
+    &__inner {
+      width: 224px;
+      padding-left: 32px;
+      padding-right: 33px;
+    }
+    &__title {
+      font-size: $font-size-16;
+    }
+    &__subtitle {
+      padding-top: 32px;
+      padding-bottom: 12px;
+      font-size: $font-size-14;
+    }
+    &__text {
+      padding-bottom: 32px;
+      font-size: $font-size-14;
+    }
+  }
+  .time-schedule {
+    padding-bottom: 32px;
+    font-size: $font-size-14;
+
+    &__days {
+      padding-top: 32px;
+      font-size: $font-size-14;
+    }
+    &__hours {
+      font-size: $font-size-14;
+    }
+  }
+  .time-schedule--days2 {
+    padding-top: 12px;
+  }
+  .contacts-list {
+    padding-top: 12px;
+    font-size: $font-size-14;
+  }
+}
+
+/*Media-contacts-1280*/
+
+@media screen and (min-width: 1200px) {
+  .contacts {
+    &__inner-section {
+      flex-direction: row;
+      justify-content: center;
+      gap: 32px;
+    }
+    &__inner {
+      width: 368px;
+      padding-left: 40px;
+      padding-right: 40px;
+    }
+    &__title {
+      font-size: $font-size-16;
+    }
+    &__subtitle {
+      padding-top: 32px;
+      font-size: $font-size-16;
+    }
+    &__text {
+      padding-bottom: 32px;
+      font-size: $font-size-16;
+      padding-right: 20px;
+    }
+  }
+  .time-schedule {
+    padding-bottom: 32px;
+
+    &__days {
+      padding-top: 32px;
+      font-size: $font-size-16;
+    }
+    &__hours {
+      font-size: $font-size-16;
+    }
+  }
+  .time-schedule--days2 {
+    padding-top: 12px;
+  }
+  .contacts-list {
+    padding-top: 32px;
+    font-size: $font-size-16;
+  }
+}
 /*Footer*/
 
 .footer {
@@ -147,7 +259,7 @@
 .buttons {
   display: flex;
   justify-content: center;
-  gap: 12px;
+  gap: 10px;
 
   &__items {
     font-family: 'DM Sans';
@@ -156,7 +268,7 @@
     font-size: $font-size-16;
     line-height: 21px;
     color: $white-color;
-    width: 198px;
+    width: 161.45px;
     height: 44px;
     background-color: $primary-color;
     border-radius: 22px;
@@ -164,7 +276,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 13.62px;
+    gap: 8px;
   }
   &__items:hover {
     transform: scale(1.1);
@@ -175,49 +287,62 @@
   .buttons--second {
     background-color: $white-color;
     color: $primary-color;
-    width: 168px;
+    width: 161px;
+    gap: 13.17px;
   }
   &__list {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     gap: 12px;
-    margin-top: 61px;
+    margin-top: 32px;
   }
 }
 
 .footer-title {
   display: flex;
+  flex-direction: column;
+
   &__itmes {
     font-family: 'Titan One';
     font-style: normal;
     font-weight: $font-weight-400;
-    font-size: $font-size-30;
-    line-height: 34px;
+    font-size: 18px;
+    line-height: 21px;
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: $secondary-color;
+    width: 232px;
+    height: 42px;
   }
   .footer-title--second {
-    font-size: $font-size-58;
-    line-height: 66px;
-    letter-spacing: 0.06em;
+    font-size: 34px;
+    line-height: 39px;
+    letter-spacing: 0.04em;
     color: $primary-color;
+    width: 200px;
+    height: 76px;
   }
   &__list {
-    padding-top: 121px;
-    padding-bottom: 60px;
-    padding-left: 16px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    padding-left: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
   }
 }
 .footer-contact {
   font-family: 'DM Sans';
   font-style: normal;
   font-weight: $font-weight-700;
-  font-size: $font-size-16;
+  font-size: 12px;
   line-height: 186%;
   letter-spacing: 0.02em;
   color: $black-color;
   display: flex;
-  gap: 5px;
+  gap: 2px;
+  justify-content: flex-end;
 
   &__tel {
     color: $primary-color;
@@ -227,20 +352,20 @@
 .svg-section {
   display: flex;
   flex-direction: column;
-  margin-left: 375px;
-  margin-top: 139px;
+  margin-right: 19.53px;
+  margin-bottom: 40px;
 }
 
 .svg-footer {
   display: flex;
-  padding-bottom: 40px;
+  padding-bottom: 46.56px;
   gap: 30px;
   justify-content: flex-end;
 
   &__items {
     background-color: $svg-background;
-    width: 34px;
-    height: 34px;
+    width: 32px;
+    height: 32px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -259,17 +384,21 @@
   display: flex;
   justify-content: center;
   border-top: 1px solid #e1e1e1;
-  padding-bottom: 4px;
-  padding-top: 7px;
+  padding-bottom: 3px;
+  padding-top: 16px;
 
   &__text {
     font-family: 'DM Sans';
     font-style: normal;
     font-weight: $font-weight-700;
     font-size: $font-size-14;
-    line-height: 186%;
+    line-height: 152%;
     letter-spacing: 0.02em;
     color: $gray-color;
+    width: 280px;
+    height: 42px;
+    padding-left: 70px;
+    padding-right: 70px;
   }
   &__text:hover {
     color: $primary-color;
@@ -279,6 +408,146 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
+/*Media-footer-768*/
+@media screen and (min-width: 768px) {
+  .buttons {
+    flex-direction: row;
+    gap: 14.5px;
+
+    &__list {
+      display: flex;
+      flex-direction: row;
+      margin-top: 60px;
+    }
+    &__items {
+      width: 191.45px;
+      gap: 13.4px;
+    }
+    .buttons--second {
+      width: 174.05px;
+      gap: 13.17px;
+    }
+  }
+  .footer-title {
+    flex-direction: row;
+    &__itmes {
+      font-size: 26px;
+      line-height: 30px;
+      letter-spacing: 0.04em;
+      width: 340px;
+      height: 57px;
+    }
+    &__list {
+    }
+
+    .footer-title--second {
+      width: 340px;
+      height: 110px;
+      font-size: 48px;
+      line-height: 55px;
+      letter-spacing: 0.06em;
+    }
+  }
+  .svg-section {
+    justify-content: flex-end;
+    margin-left: 110px;
+  }
+  .svg-footer {
+    padding-bottom: 47px;
+
+    &__items {
+      width: 34px;
+      height: 34px;
+    }
+  }
+  .footer-contact {
+    font-size: $font-size-14;
+  }
+  .copyright-section {
+    padding-bottom: 4px;
+    padding-top: 8px;
+
+    &__text {
+      line-height: 186%;
+      padding-left: 0;
+      padding-right: 0;
+      width: 278px;
+      height: 26px;
+    }
+  }
+}
+/*Media-footer-1280*/
+@media screen and (min-width: 1200px) {
+  .buttons {
+    flex-direction: row;
+    gap: 12px;
+
+    &__list {
+      display: flex;
+      flex-direction: row;
+      margin-top: 61px;
+    }
+    &__items {
+      width: 198px;
+      gap: 13.62px;
+    }
+    .buttons--second {
+      width: 168px;
+      gap: 12.71px;
+    }
+  }
+  .footer-title {
+    flex-direction: row;
+    &__itmes {
+      font-size: $font-size-30;
+      line-height: 34px;
+      width: 472px;
+      height: 34px;
+    }
+    &__list {
+      padding-top: 121px;
+      padding-bottom: 60px;
+      padding-left: 16px;
+    }
+    .footer-title--second {
+      width: 474px;
+      height: 66px;
+      font-size: $font-size-58;
+      line-height: 66px;
+      letter-spacing: 0.06em;
+    }
+  }
+  .svg-section {
+    margin-left: 375px;
+    margin-top: 139px;
+    margin-right: 16px;
+    margin-bottom: 60px;
+  }
+  .svg-footer {
+    padding-bottom: 60px;
+
+    &__items {
+      width: 34px;
+      height: 34px;
+    }
+  }
+  .footer-contact {
+    font-size: $font-size-16;
+  }
+  .copyright-section {
+    padding-bottom: 4px;
+    padding-top: 7px;
+
+    &__text {
+      line-height: 186%;
+      padding-left: 0;
+      padding-right: 0;
+      width: 278px;
+      height: 26px;
+    }
+  }
+}
+
 /*Modala*/
 .modal {
   background: rgba(0, 0, 0, 0.2);
@@ -294,8 +563,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 100%;
-    border: 1px solid red;
+    padding: 0;
+    border-radius: 50%;
+    border: 1px solid $secondary-color;
     background: $white-color;
     color: $black-color;
     width: 30px;
@@ -303,9 +573,19 @@
     position: relative;
     left: 490px;
     bottom: 90px;
-
+  }
+  &__button:hover {
+    background-color: $secondary-color;
     cursor: pointer;
   }
+
+  &__svg {
+    fill: $secondary-color;
+  }
+  &__svg:hover {
+    fill: $white-color;
+  }
+
   &__title {
     font-weight: 700;
     font-size: 20px;
@@ -325,7 +605,7 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  border: 3px solid $primary-color;
+  border: 3px solid $secondary-color;
 }
 .form {
   display: flex;
@@ -337,7 +617,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    color: $gray-color;
+    color: $primary-color;
   }
   &__input {
     width: 370px;
@@ -349,16 +629,27 @@
     outline: none;
     cursor: pointer;
   }
+
+  &__input:focus {
+    border: 1px solid $secondary-color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    color: $primary-color;
+  }
+  &__input:hover {
+    border: 1px solid $secondary-color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
   &__items {
     display: flex;
     flex-direction: column;
     position: relative;
-    color: $gray-color;
+    color: $primary-color;
   }
   &__text-area {
     width: 370px;
     height: 120px;
-    border: 1px solid $gray-color;
+    border: 1px solid $secondary-color;
     border-radius: 4px;
     margin-top: 4px;
     padding-left: 16px;
@@ -371,16 +662,24 @@
     outline: none;
     cursor: pointer;
   }
+  &__text-area:focus {
+    border: 1px solid $secondary-color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  &__text-area:hover {
+    border: 1px solid $secondary-color;
+    color: $primary-color;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 .button-footer {
   background: $white-color;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 25px;
-  border: 1px solid $secondary-color;
+  border-radius: 22px;
+  border: 2px solid $secondary-color;
   letter-spacing: 0.06em;
-  padding: 10px 80px;
-  width: 200px;
-  height: 50px;
+  width: 100px;
+  height: 44px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -390,8 +689,115 @@
   font-size: 16px;
   line-height: 30px;
   cursor: pointer;
+  padding: 0;
 }
+.button-footer:hover {
+  background-color: $secondary-color;
+  color: $white-color;
+  transform: scale(1.25);
+  animation-duration: 3s;
+  border: none;
+}
+
 .is-hidden {
+  visibility: hidden;
+  opacity: 0;
+}
+/*Modala-2*/
+.modal-2 {
+  background: rgba(0, 0, 0, 0.2);
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 99;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.inner-div-2 {
+  width: 528px;
+  height: 581px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  border: 3px solid $secondary-color;
+}
+.modal-2-button {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  padding: 0;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid $secondary-color;
+  background-color: $white-color;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+.modal-maps {
+  width: 100%;
+}
+
+.modal-2-container {
+  border: 3px solid $secondary-color;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 30px;
+}
+.modal__title-2 {
+  font-family: 'Titan One';
+  font-style: normal;
+  font-weight: $font-weight-400;
+  font-size: 18px;
+  line-height: 21px;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: $primary-color;
+  display: flex;
+  justify-content: center;
+}
+
+.modal2-adress {
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: $font-weight-500;
+  font-size: $font-size-16;
+  letter-spacing: 0.04em;
+  color: $secondary-color;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.modalbutton-2 {
+  background-color: $white-color;
+  border-radius: 25px;
+  border-color: $secondary-color;
+  padding: 10px;
+  margin-left: 170px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.modalbutton-2:hover {
+  transform: scale(1.2);
+  transition-duration: 1s;
+}
+
+.modal_btn-text {
+  color: $primary-color;
+  text-decoration: none;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: $font-weight-400;
+  font-size: $font-size-16;
+}
+.location-svg {
+  fill: $primary-color;
+}
+.is-hidden-2 {
   visibility: hidden;
   opacity: 0;
 }
